--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
     <title>LP 1 Demo</title>
   </head>
   <body>
-  	<div class="container">
-		<h1 class="text-uppercase"><strong>The biggest startup event of the year</strong></h1>
-		<hr>
-		<button class="btn btn-primary btn-xl row" >Find out more</button>
+  	<div class="container d-flex align-items-center h-100">
+  		<div class="row">
+  			<header class="text-center col-12">
+				<h1 class="text-uppercase"><strong>The biggest startup event of the year</strong></h1>
+			</header>
+			<div class="buffer col-12"></div>
+			<section class="text-center col-12">
+				<hr>
+				<button class="btn btn-primary btn-xl row" >Find out more</button>
+			</section>
+		</div>
   	</div>
 
     <!-- Optional JavaScript -->
